# django_login_via_telegram

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  pyproject.toml  telegram_bot.py
bot/src/: __init__.py  logger.py  telegram_bot.py
django_app/: __init__.py  pyproject.toml
django_app/accounts/: admin.py  apps.py  views.py
django_app/core/: asgi.py  settings.py  wsgi.py
django_app/src/: manage.py
django_app/src/accounts/: admin.py  api.py  models.py  schemas.py  urls.py  views.py
django_app/src/accounts/management/: __init__.py
django_app/src/accounts/management/commands/: delete_unused_tokens.py
django_app/src/accounts/migrations/: 0001_initial.py
django_app/src/common/: utils.py
django_app/src/core/: settings.py  urls.py
django_app/src/static/css/: styles.css
django_app/src/templates/: base.html
django_app/src/templates/accounts/: login.html
docker/bot/: .dockerignore  Dockerfile
docker/django_app/: .dockerignore  Dockerfile  entrypoint.sh
