[project]
name = "django-auth-bot"
version = "0.1.0"
description = "Bot to authenticate users via Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.0", "python-telegram-bot>=21.7"]

[project.optional-dependencies]
dev = ["ruff>=0.8.1"]

[tool.ruff.lint.mccabe]
max-complexity = 3

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.ruff]
line-length = 80
